add jac project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-env/
-venv/
-jac-env/
+# Jac project
+packages/
+*.jbc
+*.jir
 
+# Python
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+
+# Node.js
+node_modules/
+
+# Build artifacts
 .jac/
+*.session
+*.session.*
